Chap05: 5.8 catコマンドの改造(C/Go/Python)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(.)
 include_directories(chap01)
 
 add_executable(normal_linux_programming
-        chap01/hello.c chap01/1_5_コマンドライン引数/hello.c chap01/1_5_コマンドライン引数/args.c chap01/1_5_コマンドライン引数/intentional_segmentation_fault.c chap04/bell.c chap05/cat.c)
+        chap01/hello.c chap01/1_5_コマンドライン引数/hello.c chap01/1_5_コマンドライン引数/args.c chap01/1_5_コマンドライン引数/intentional_segmentation_fault.c chap04/bell.c chap05/cat.c chap05/cat2.c chap05/cat3.c)
